--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<script src="/assets/js/ngx-store.config.js"></script>
   <meta charset="utf-8">
   <title>Elexilink</title>
   <base href="/">
