--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Event Registry</title>
 </head>
-<body>
+<body style="margin: 0;">
     <iframe src="http://93.103.86.126:8080" frameborder="0" width="100%" height="100%"></iframe>
 </body>
 </html>
