--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key="AIzaSyCQHB_M5kH9mijFb3q27KTfOxUfy_ak7Q4"></script>
     <title>Event Registry</title>
 </head>
 <body style="margin: 0;">
-    <iframe src="http://93.103.212.142:8090/login" frameborder="0" width="100%" height="100%"></iframe>
 </body>
 </html>
