--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key="AIzaSyCQHB_M5kH9mijFb3q27KTfOxUfy_ak7Q4"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key="AIzaSyCQHB_M5kH9mijFb3q27KTfOxUfy_ak7Q4""></script>
     <title>Event Registry</title>
 </head>
 <body style="margin: 0;">
