--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="//maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCQHB_M5kH9mijFb3q27KTfOxUfy_ak7Q4"></script>
+    <style>
+        /* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
+#map {
+  height: 100%;
+}
+
+/* 
+ * Optional: Makes the sample page fill the window. 
+ */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+    </style>
     <title>Event Registry</title>
 </head>
 <body style="margin: 0;">
+    <div id="map"></div>
+        <script>
+        let map;
+
+async function initMap() {
+  const { Map } = await google.maps.importLibrary("maps");
+
+  map = new Map(document.getElementById("map"), {
+    center: { lat: -34.397, lng: 150.644 },
+    zoom: 8,
+  });
+}
+
+initMap();
+    </script>
 </body>
 </html>
