--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        delete window.document.referrer;
+        window.document.__defineGetter__('referrer', function () {
+            return "https://eventregistry.org/";
+        });
+    </script>
     <script src="//maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCQHB_M5kH9mijFb3q27KTfOxUfy_ak7Q4"></script>
     <style>
         /* 
