--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script>
         delete window.document.referrer;
         window.document.__defineGetter__('referrer', function () {
-            return "https://eventregistry.org/";
+            return "https://eventregistry.org";
         });
     </script>
     <script src="//maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCQHB_M5kH9mijFb3q27KTfOxUfy_ak7Q4"></script>
